# Python-Langchaing-app-basic

./: Description.txt
basic-langchain/: README.md  main.py  prompt.py  pyproject.toml  schemas.py
basic-vector-dbs/: ingestion.py  main.py  mediumblog1.txt  pyproject.toml
langchain-vector-local/: .gitignore  main.py
pdf-langchain/: main.py  pyproject.toml
react-langchain/: README.md  main.py  pyproject.toml
