[project]
name = "basic-vector-dbs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.32",
    "langchain-pinecone>=0.2.11",
    "langchain-text-splitters>=0.3.10",
    "langchainhub>=0.1.21",
    "pinecone>=7.3.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.11.0",
]
